--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "nightmare": "^3.0.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-onclickoutside": "^6.8.0",
     "react-popper-tooltip": "^2.8.1",
     "react-scripts": "2.1.8"
   },
