--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "jest-enzyme": "^7.0.2",
     "nightmare": "^3.0.1",
+    "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-onclickoutside": "^6.8.0",
