"Are you sure you want to quit?" dialogue added.

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "nightmare": "^3.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
+    "react-beforeunload": "^2.1.0",
     "react-dom": "^16.8.4",
     "react-onclickoutside": "^6.8.0",
     "react-popper-tooltip": "^2.8.1",
