Custom transparent logos. Browser back button action: work in progress

--- a/package.json
+++ b/package.json
@@ -3,16 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "jest-enzyme": "^7.0.2",
-    "nightmare": "^3.0.1",
+    "jest-enzyme": "^7.1.0",
+    "nightmare": "^3.0.2",
     "prop-types": "^15.7.2",
-    "react": "^16.8.4",
+    "react": "^16.8.6",
     "react-beforeunload": "^2.1.0",
-    "react-dom": "^16.8.4",
+    "react-dom": "^16.8.6",
     "react-ga": "^2.6.0",
     "react-onclickoutside": "^6.8.0",
-    "react-popper-tooltip": "^2.8.1",
-    "react-scripts": "2.1.8"
+    "react-popper-tooltip": "^2.8.3",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -32,13 +33,13 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.11.2",
-    "eslint": "5.12.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.13.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "eslint": "^6.1.0",
+    "eslint-config-airbnb": "^17.1.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.3",
     "react-snap": "^1.23.0"
   }
 }
