Cordova build for ios improved

--- a/cordova/package.json
+++ b/cordova/package.json
@@ -26,8 +26,8 @@
       "cordova-plugin-ionic-webview": {}
     },
     "platforms": [
-      "android",
-      "ios"
+      "ios",
+      "android"
     ]
   }
 }
