--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,9 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# android keys
+/cordova/android_keystore.jks
+/cordova/platforms/android/keystore.jks
+/cordova/platforms/android/private_key.pepk
+/cordova/upload_certificate.pem
