Final commit for July 2020. Cordova build updates

--- a/cordova/package.json
+++ b/cordova/package.json
@@ -28,8 +28,8 @@
       "cordova-plugin-statusbar": {}
     },
     "platforms": [
-      "android",
-      "ios"
+      "ios",
+      "android"
     ]
   }
 }
